[package]
name = "genfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.15", features = ["std", "derive"], default-features = false }
strum = { version = "0.24.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
