[package]
name = "genfile"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.15", features = ["derive"] }
thiserror = "1.0.31"

[profile.release]
opt-level = "s"
lto = true
strip = true
