[package]
name = "genfile"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
thiserror = "1.0.37"

[profile.release]
opt-level = "s"
lto = true
strip = true
